# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
page_loader/: __init__.py  download.py  page_loader.py
tests/: download_test.py
tests/fixtures/: test_file_1.html
workflows/: python-package.yml
