[tool.poetry]
name = "page_loader"
version = "1.0.0"
description = "page loader"
authors = ["Metaller <metaller7440326@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
progress = "^1.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
flake8 = "^3.8.4"
pytest = "^6.2.2"
requests-mock = "^1.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
page-loader = "page_loader.page_loader:main"